syntax = "proto3";

option go_package = "plixx.dev/id_generator";

message GenerateIdRequest {
}

message GenerateIdResponse {
  int64 id = 1;
}

message GenerateMultipleIdsRequest {
  int64 count = 1;
}

message GenerateMultipleIdsResponse {
  repeated int64 ids = 1;
}

service IdService {
  rpc GenerateId(GenerateIdRequest) returns (GenerateIdResponse);
  rpc GenerateMultipleIds(GenerateMultipleIdsRequest) returns (GenerateMultipleIdsResponse);
}

